--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -24,7 +24,7 @@ limitations under the License.
         <f:event type="preRenderView" listener="#{login.checkLogin}"/>
         <h:head>
             <meta charset="utf-8"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
             <title>314专属物品管理系统</title>
             <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
             <link href="assets/css/datepicker3.css" rel="stylesheet"/>
@@ -51,7 +51,7 @@ limitations under the License.
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
                                     <li><a href="Stuff_modify.jsf"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                                    <li><p:link onclick="#{login.logout()}"><span class="glyphicon glyphicon-log-out"></span> Logout</p:link></li>
+                                    <li style="padding-left: 20px;"><h:form><p:commandButton action="#{login.logout}" value="LogOut" styleClass="logout"><span class="glyphicon glyphicon-log-out"></span> </p:commandButton></h:form></li>
                                 </ul>
                             </li>
                         </ul>
@@ -66,9 +66,9 @@ limitations under the License.
                 </form>
                 <ul class="nav menu">
                     <li class="active"><a href="home.jsf"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-                    <li><p:link href="ReadyKnow.jsf"><span class="glyphicon glyphicon-th">Ready To Know</span> </p:link></li>
-                    <li><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
-                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
+                    <li><p:link href="ReadyKnow.jsf"><span class="glyphicon glyphicon-th">Ready&nbsp;To&nbsp;Know</span> </p:link></li>
+                    <li><a href="Item_query_filter.jsf"><span class="glyphicon glyphicon-stats"></span> Item&nbsp;Filter</a></li>
+                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> LendItem</a></li>
                     <li><a href="forms.html"><span class="glyphicon glyphicon-pencil"></span> Forms</a></li>
                     <li><a href="panels.html"><span class="glyphicon glyphicon-info-sign"></span> Alerts &amp; Panels</a></li>
                     <li class="parent ">
@@ -133,7 +133,7 @@ limitations under the License.
                         <li class="active">Dashboard</li>
                     </ol>
                 </div><!--/.row-->
-
+                <h:messages/>
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Dashboard</h1>
